<resources>
    <string name="app_name">Online Loan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_register_now">New User? Register Here</string>
    <string name="login">Login</string>
    <string name="online_loan">Online Loan</string>
    <string name="full_name">Full Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="register">Register</string>
    <string name="welcome">Hai, %1$s !\nSelamat Datang di Online Loan!</string>
    <string name="msg_load_error">Failed to load data!</string>
    <string name="msg_connection_error">Failed to connect to server!</string>
    <string name="msg_something_wrong">Something is wrong!</string>
    <string name="msg_fill_all_field_loan">Input all fields to check the loan!</string>
    <string name="msg_upload_document_loan">Upload documents to check the loan!</string>
    <string name="msg_between_min_max">Please input between minimal and maximal amount!</string>
    <string name="msg_amount_between_min_max">Please input amount between minimal and maximal amount!</string>
    <string name="msg_time_between_min_max">Please input time between minimal and maximal amount!</string>
    <string name="msg_check_terms">Please agree to the terms and condition!</string>
    <string name="nik_no_ktp">NIK (No KTP)</string>
    <string name="loan_with_collateral">Collateral Loan</string>
    <string name="loan_without_collateral">Non Collateral Loan</string>
    <string name="profile">Profile</string>
    <string name="borrower_data">Borrower Data</string>
    <string name="see_detail">See Detail…</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan">Loan</string>
    <string name="time_period">Time Period</string>
    <string name="min_loan">Min Rp. %1$s</string>
    <string name="max_loan">Max Rp. %1$s</string>
    <string name="min_time">Min %1$s Months</string>
    <string name="max_time">Max %1$s Months</string>
    <string name="rp_1_000_000">Rp.1.000.000</string>
    <string name="calculation">Calculation</string>
    <string name="interest">Interest</string>
    <string name="loan_total">Loan Total</string>
    <string name="installment_per_month">Installment per Month</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="accept_and_apply_loan">Accept and Apply Loan</string>
    <string name="collateral">Collateral</string>
    <string name="choose_collateral">Choose Collateral</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="house">House</string>
    <string name="location">Location</string>
    <string name="area_size_m2">Area Size (m2)</string>
    <string name="estimated_price_rp">Estimated Price (Rp.)</string>
    <string name="upload_stnk">Upload STNK</string>
    <string name="upload_bpkb">Upload BPKB</string>
    <string name="upload_house_photo">Upload House Photo</string>
    <string name="upload_house_certificate">Upload House Certificate</string>
    <string name="check_loan">Check Loan</string>
    <string name="transaction">Transaction</string>
    <string name="report">Report</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="job">Job</string>
    <string name="institution">Institution</string>
    <string name="salary">Salary</string>
    <string name="save_profile">Save Profile</string>
    <string name="id">Id</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="loan_approval">Loan Approval</string>
    <string name="min_loan_time">Min %1$s Months</string>
    <string name="max_loan_time">Max %1$s Months</string>
    <string name="min_loan_amount">Min Rp. %1$s</string>
    <string name="max_loan_amount">Max Rp. %1$s</string>
    <string name="con_month">%1$d Months</string>
    <string name="con_amount">Rp %1$s</string>
    <string name="loaner_data">Customer Data</string>
    <string name="account_number">Account Number</string>
    <string name="loan_detail">Loan Detail</string>
    <string name="installment">Installment</string>
    <string name="house_certificate">House Certificate</string>
    <string name="house_photo">House Photo</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="manufacture_year">Manufacture Year</string>
    <string name="stnk">STNK</string>
    <string name="bpkb">BPKB</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="payment">Payment</string>
    <string name="pembayaran_cicilan_ke">Pay the loan to:</string>
    <string name="_563343656235575642">563343656235575642</string>
    <string name="rp_15_000_000">Rp. 15.000.000</string>
    <string name="jl_ki_hajar_dewantara_cikarang">Jl. Ki Hajar Dewantara, Cikarang</string>
    <string name="two_thousand">2000</string>
    <string name="_500_000_000">500.000.000</string>
    <string name="owner">Owner</string>
    <string name="report_selection">Report Selection</string>
    <string name="chart_type">Chart Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="generate">Generate</string>
    <string name="loan_categorized_by_type">Loan Categorized by Type</string>
    <string name="house_owner">House Owner</string>
    <string name="interest_setting">Interest and Vehicle Setting</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="non_collateral">Non Collateral</string>
    <string name="collateral_car">Collateral Car</string>
    <string name="collateral_motorcycle">Collateral Motorcycle</string>
    <string name="collateral_house">Collateral House</string>
    <string name="save_interest_rate">Save Interest Rate</string>
    <string name="loan_info">Loan Info</string>
    <string name="collateral_loan">Collateral Loan</string>
    <string name="collateral_desc">Collateral loan is a loan product that provides bigger loan with assets as collateral. The asset that can be guarantee is car, motorcycle, and house. The nominal amount can borrow could be different depend on collateral type. The funds can be disbursed quickly with low interest.</string>
    <string name="simulation_of_collateral_loan">Simulation of Collateral Loan</string>
    <string name="non_collateral_loan">Non-Collateral Loan</string>
    <string name="noncollateral_desc">Non-collateral loan is a loan product that provides credit facilities without the need to guarantee asset The funds that have been obtained from the Bank, can be used for anything, such as financing house renovations, marriages, education, medical treatment, business capital and others financial needs .</string>
    <string name="simulation_of_non_collateral_loan">Simulation of Non-Collateral Loan</string>
    <string name="check">Check</string>
    <string name="vehicle_price">Vehicle Price</string>
    <string name="price">Price</string>
    <string name="change_price">Change Price</string>
    <string name="update">Update</string>
</resources>
