<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanInfoActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collateral_loan"
        android:textColor="@color/colorGreen1"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collateral_desc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_of_collateral_loan"
        android:textSize="15sp"
        android:textColor="@color/colorBgGreen"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/tb_simulation_collateral"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/non_collateral_loan"
        android:textColor="@color/colorGreen1"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noncollateral_desc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulation_of_non_collateral_loan"
        android:textSize="15sp"
        android:textColor="@color/colorBgGreen"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/tb_simulation_noncollateral"/>

</LinearLayout>