<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransactionDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll_approval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_reject"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                style="@style/Button.Negative"
                android:text="@string/reject"/>

            <Button
                android:id="@+id/btn_approve"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                style="@style/Button.Positive"
                android:text="@string/approve"/>

        </LinearLayout>

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loaner_data" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/name"/>

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTextBrown"
                        tools:text="Arie Sukma Tarigan"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/nik_no_ktp"/>

                    <TextView
                        android:id="@+id/txt_nik"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTextBrown"
                        tools:text="001201500032" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/account_number"/>

                    <TextView
                        android:id="@+id/txt_account_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTextBrown"
                        tools:text="01234567" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loan_detail" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/status" />

                    <TextView
                        android:id="@+id/txt_status"
                        style="@style/TextHorizontal.Caption"
                        android:gravity="end"
                        tools:text="Pending" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/loan_amount" />

                    <TextView
                        android:id="@+id/txt_loan_amount"
                        style="@style/TextHorizontal.Caption"
                        android:gravity="end"
                        tools:text="Rp 2.000.000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/time_period" />

                    <TextView
                        android:id="@+id/txt_time_period"
                        style="@style/TextHorizontal.Caption"
                        android:gravity="end"
                        tools:text="2 Months" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/installment" />

                    <TextView
                        android:id="@+id/txt_installment"
                        style="@style/TextHorizontal.Caption"
                        android:gravity="end"
                        tools:text="Rp 200.000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/loan_total" />

                    <TextView
                        android:id="@+id/txt_loan_total"
                        style="@style/TextHorizontal.Caption"
                        android:gravity="end"
                        tools:text="Rp 200.000" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_collateral"
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/collateral" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"/>

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Jl. Gatot Subroto, Jakarta Pusat"
                    android:textColor="@color/colorTextBrown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/area_size_m2"/>

                <TextView
                    android:id="@+id/txt_area_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="400"
                    android:textColor="@color/colorTextBrown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/estimated_price_rp"/>

                <TextView
                    android:id="@+id/txt_estimated_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Rp 345.000.000"
                    android:textColor="@color/colorTextBrown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/house_certificate"/>

                <ImageView
                    android:id="@+id/img_house_certificate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:src="@drawable/ic_upload_image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/house_photo"/>

                <ImageView
                    android:id="@+id/img_house_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:src="@drawable/ic_upload_image"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"/>

                <TextView
                    android:id="@+id/txt_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Daihatsu"
                    android:textColor="@color/colorTextBrown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/model"/>

                <TextView
                    android:id="@+id/txt_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="400"
                    android:textColor="@color/colorTextBrown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/manufacture_year"/>

                <TextView
                    android:id="@+id/txt_manufacture_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Rp 345.000.000"
                    android:textColor="@color/colorTextBrown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/stnk"/>

                <ImageView
                    android:id="@+id/img_stnk"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:src="@drawable/ic_upload_image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bpkb"/>

                <ImageView
                    android:id="@+id/img_bpkb"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:src="@drawable/ic_upload_image"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/payment" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_bank"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pembayaran_cicilan_ke" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="8dp"
                            android:text="@string/_563343656235575642"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>