<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:contentPadding="3dp">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_question"
                style="@style/Text.Title"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/change_price"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_question"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_update"
                style="@style/Button.Positive"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/txt_price"
                android:layout_marginTop="8dp"
                android:text="@string/update" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>